--- a/sass/components/_footer.scss
+++ b/sass/components/_footer.scss
@@ -83,66 +83,64 @@
   }
 }
 
-.footer .title {
-  display: inline-block;
-  margin-bottom: 21px;
-  margin-top: 0px;
+.footer {
+  .title {
+    display: inline-block;
+    margin-bottom: 21px;
+    margin-top: 0px;
 
-  font-weight: 700;
-  font-size: 14px;
-  line-height: 1.14;
-  text-transform: uppercase;
+    font-weight: 700;
+    font-size: 14px;
+    line-height: 1.14;
+    text-transform: uppercase;
 
-  color: $background-color;
-}
+    color: $background-color;
+  }
+  &-button {
+    display: flex;
+    align-items: center;
 
-.footer-button {
-  display: flex;
-  align-items: center;
+    padding: 10px 32px;
+    border-radius: 4px;
+    border: 0px;
 
-  padding: 10px 32px;
-  border-radius: 4px;
-  border: 0px;
+    font-weight: 700;
+    font-size: 16px;
+    line-height: 1.9;
+    text-align: center;
+    letter-spacing: 0.06em;
 
-  font-weight: 700;
-  font-size: 16px;
-  line-height: 1.9;
-  text-align: center;
-  letter-spacing: 0.06em;
+    color: $background-color;
+    background-color: $accent-color;
+  }
+  &-form {
+    display: flex;
+    align-items: center;
+    margin: 0;
+    padding: 0;
+  }
+  &-input {
+    box-sizing: border-box;
+    width: 358px;
+    height: 50px;
+    margin-right: 12px;
+    padding-left: 12px;
 
-  color: $background-color;
-  background-color: $accent-color;
-}
+    border-radius: 4px;
+    border: 1px solid rgba(255, 255, 255, 0.3);
 
-.footer-form {
-  display: flex;
-  align-items: center;
-  margin: 0;
-  padding: 0;
-}
+    font-size: 16px;
+    line-height: 1.25;
 
-.footer-input {
-  box-sizing: border-box;
-  width: 358px;
-  height: 50px;
-  margin-right: 12px;
-  padding-left: 12px;
+    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
 
-  border-radius: 4px;
-  border: 1px solid rgba(255, 255, 255, 0.3);
-
-  font-size: 16px;
-  line-height: 1.25;
-
-  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
-
-  color: $footer-navigation-color;
-  background-color: $footer-color;
-}
-
-.footer-mail {
-  margin-left: 10px;
-  fill: $background-color;
+    color: $footer-navigation-color;
+    background-color: $footer-color;
+  }
+  &-mail {
+    margin-left: 10px;
+    fill: $background-color;
+  }
 }
 
 .footer .copyright {
