--- a/sass/components/_portfolio.scss
+++ b/sass/components/_portfolio.scss
@@ -1,5 +1,3 @@
-@import "../utils/variables";
-
 .portfolio.page-header {
   border-bottom: 1px solid #ececec;
 }
@@ -21,41 +19,43 @@
 .filter {
   display: flex;
   flex-wrap: wrap;
-  &.card {
+  > .card + .card {
     width: 370px;
     margin-right: 30px;
     margin-bottom: 30px;
   }
-  &.card:nth-child(3n) {
+  .card:nth-child(3n) {
     margin-right: 0px;
   }
-  &.card:nth-last-child(-n + 3) {
+  .card:nth-last-child(-n + 3) {
     margin-bottom: 0px;
   }
+}
 
-  &.card:hover,
-  &.card:focus {
-    box-shadow: 1px 4px 6px rgba(0, 0, 0, 0.16), 0px 4px 4px rgba(0, 0, 0, 0.06),
-      0px 1px 1px rgba(0, 0, 0, 0.12);
-  }
+.card:hover,
+.card:focus {
+  box-shadow: 1px 4px 6px rgba(0, 0, 0, 0.16), 0px 4px 4px rgba(0, 0, 0, 0.06),
+    0px 1px 1px rgba(0, 0, 0, 0.12);
+}
 
-  &.card {
-    margin-right: 8px;
-    border-radius: 4px;
+.card {
+  margin-right: 8px;
+  border-radius: 4px;
 
-    transition: box-shadow 250ms $cubic-bezier;
-  }
-  &.card:last-child {
-    margin-right: 0px;
-  }
+  transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.card:last-child {
+  margin-right: 0px;
 }
 
 .card-link {
   display: block;
-  &:hover .description,
-  &:focus .description {
-    transform: translateY(0);
-  }
+}
+
+.card-link:hover .description,
+.card-link:focus .description {
+  transform: translateY(0);
 }
 
 .card-foto {
@@ -78,7 +78,7 @@
   line-height: 2;
   letter-spacing: 0.06em;
 
-  color: $primary-text-color;
+  color: var(--primary-text-color);
 }
 
 .filter .text {
@@ -88,7 +88,7 @@
   font-size: 16px;
   line-height: 1.88;
 
-  color: $secondary-text-color;
+  color: var(--secondary-text-color);
 }
 
 .description {
@@ -104,8 +104,8 @@
 
   transform: translateY(100%);
 
-  transition: transform 250ms $cubic-bezier;
+  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
 
-  color: $background-color;
+  color: var(--background-color);
   background-color: rgba(33, 150, 243, 0.9);
 }
