--- a/sass/components/_features.scss
+++ b/sass/components/_features.scss
@@ -32,7 +32,7 @@
 .section {
   padding-top: 94px;
   padding-bottom: 94px;
-  &.border {
+  .border {
     border-bottom: 1px solid #ececec;
   }
   &-title {
